app/styles/_slides.scss
.cover {
  position: fixed; 
  top: -50%; 
  left: -50%; 
  width: 200%; 
  height: 200%;
  @media screen and (max-width: 500px) {
    width: 240%;
  }
}
.slide__bg {
  position: absolute; 
  top: 0; 
  left: 0; 
  right: 0; 
  bottom: 0; 
  margin: auto; 
  min-width: 50%;
  min-height: 50%;
  overflow-x: hidden;
  opacity: 0;
  transform: scale(1);
  -webkit-transition: opacity 0.5s linear, transform 1.2s ease-in-out;
  -moz-transition: opacity 0.5s linear, transform 1.2s ease-in-out;

  &.active {
    opacity: 1;
    -webkit-transition: opacity 0.5s linear, transform 1.2s ease-in-out;
    -moz-transition: opacity 0.5s linear, transform 1.2s ease-in-out;
    @media screen and (max-width: 768px) {
      opacity: 0.65;
    }
  }
  &.zoom {
    transform: scale(1.5) translateX(200px);
    -webkit-transition: opacity 0.5s linear, transform 1.2s ease-in-out;
    -moz-transition: opacity 0.5s linear, transform 1.2s ease-in-out;
    -webkit-transition-delay: 0.2s; /* Safari */
    transition-delay: 0.2s;
  }
}
  .slide__bg--pull-left {
    @media screen and (max-width: 500px) {
      margin-left: -20%;
    }
  }
.slide__logo {
  border-bottom: 1px solid rgba($white, 0.5);
  padding-bottom: 14px;
}
.slide__side-by-side {
  @include clearfix();
  padding-top: em($baseline);
  @media screen and (max-width: 500px) {
    padding-top: 0;
  }
}
  .slide__side--left {
    float: left;
    width: 68%;
    @media screen and (max-width: 1000px) {
      font-size: 12px;
      width: 58%;
    }
    @media screen and (max-width: 500px) {
      float: none;
      font-size: 9px;
      width: 100%;
    }
  }
  .slide__side--right {
    float: right;
    margin-left: 5%;
    @media screen and (max-width: 1000px) {
      margin-left: 0;
      width: 37%;
    }
    @media screen and (max-width: 500px) {
      float: none;
      font-size: 9px;
      width: 100%;
    }
  }
.slide__img {
  margin-top: 18px;
  @media screen and (max-height: 899px) {
    display: block;
    margin: 18px auto 0;
    max-width: 75%;
  } 
}
  .slide__img--number {
    margin-bottom: 10px;
  }
  .slide__img--hide-small {
    @media screen and (max-width: 500px) {
      display: none;
    }
    @media screen and (max-height: 899px) {
      display: inline-block;
      margin: 18px 0;
      max-width: 100%;
    } 
  }
.slide__sharing {
  position: absolute;
  right: 32px;
  bottom: 32px;
  z-index: 110;
  @media screen and (max-width: 500px) {
    display: none;
  }
}
  .sharing__label {
    color: $blue-muted;
    display: inline-block;
    font-family: $font-sans-alt;
    font-size: em(14);
    vertical-align: middle;
  }
  .sharing__button {
    margin-left: 6px;
    vertical-align: middle;
  }

.section {
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  -moz-transition: opacity 0.3s linear;

  &.active {
    opacity: 1;
    -webkit-transition: opacity 1.5s linear;
    -moz-transition: opacity 1.5s linear;
    -webkit-transition-delay: 0.8s; /* Safari */
    transition-delay: 0.8s;
  }
}

